--- a/aiInVideogames/Assets/UI Toolkit/MyUi/MainMenu.uxml
+++ b/aiInVideogames/Assets/UI Toolkit/MyUi/MainMenu.uxml
@@ -1,6 +1,6 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI%20Toolkit/MyUi/style.uss?fileID=7433441132597879392&amp;guid=15668a570de9606429d02b019fb721e8&amp;type=3#style" />
-    <ui:VisualElement name="mainMenuContainer" style="justify-content: center; width: 100%; height: 100%; padding-left: 5%; padding-right: 5%; padding-top: 5%; padding-bottom: 5%; background-color: rgba(0, 0, 0, 0); opacity: 1; display: flex; visibility: visible;">
+    <ui:VisualElement name="mainMenuContainer" style="justify-content: center; width: 100%; height: 100%; padding-left: 5%; padding-right: 5%; padding-top: 5%; padding-bottom: 5%; background-color: rgb(65, 69, 82); opacity: 1; display: flex; visibility: visible;">
         <ui:Label text="Medieval Aquarium" display-tooltip-when-elided="true" name="Label" class="header" style="width: auto; font-size: 50px; height: auto; justify-content: flex-start; align-items: center; white-space: nowrap; -unity-text-align: upper-center; margin-top: 0; color: rgb(156, 111, 111); -unity-font-style: bold-and-italic; opacity: 1;" />
         <ui:GroupBox name="btnMainGroup" style="width: 100%; height: auto; align-items: center; margin-top: 18px;">
             <ui:Button text="Start game" display-tooltip-when-elided="true" name="btnStartGame" style="margin-top: 4px; margin-bottom: 10px; font-size: 18px; background-color: rgb(156, 111, 111); border-top-left-radius: 10px; border-bottom-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-left-color: rgb(156, 144, 111); border-right-color: rgb(156, 144, 111); border-top-color: rgb(156, 144, 111); border-bottom-color: rgb(156, 144, 111); color: rgb(255, 255, 255); -unity-font: none; border-left-width: 2px; border-right-width: 2px; border-top-width: 2px; border-bottom-width: 2px;" />
@@ -27,6 +27,6 @@
         </ui:VisualElement>
     </ui:VisualElement>
     <ui:VisualElement name="inputHintsContainer" style="width: 100%; height: 100%; position: absolute; display: none;">
-        <ui:Label text="Press &quot;E&quot; to interact" display-tooltip-when-elided="true" name="InputHint" style="position: absolute; left: 20px; right: auto; bottom: 20px; color: rgba(255, 255, 255, 255); -unity-font-style: bold;" />
+        <ui:Label text="Press &quot;E&quot; to interact" display-tooltip-when-elided="true" name="InputHint" style="position: absolute; left: 20px; right: auto; bottom: 20px; color: rgb(255, 255, 255); -unity-font-style: bold;" />
     </ui:VisualElement>
 </ui:UXML>
